hacky fix for ModRev binary to support uppercase nodes
force lowercase all, and warn users to not create similar names

--- a/modrev_tutorial.ipynb
+++ b/modrev_tutorial.ipynb
@@ -15,8 +15,8 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "import pandas as pd # for the visualization of lists of states\n",
-    "import biolqm"
+    "import biolqm\n",
+    "import pymodrev"
    ],
    "outputs": [],
    "execution_count": null
@@ -35,18 +35,9 @@
    "cell_type": "markdown",
    "source": [
     "Note:\n",
-    "Example from paper is ->\n",
+    "Example from CSMB2020 paper is ->\n",
     "modrev -m /opt/ModRev/examples/model.lp -obs /opt/ModRev/examples/obsTS01.lp -up s -v 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
-    "import pymodrev"
-   ],
-   "outputs": [],
-   "execution_count": null
   },
   {
    "metadata": {},
@@ -226,12 +217,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "**Example of a remote file (with intentional errors on the code to demonstrate some possible errors)**"
+   "source": [
+    "### **Example of a remote file**\n",
+    "\n",
+    "The following code has intentional errors (incorrect arguments, usage, etc.), for demonstration purposes."
+   ]
   },
   {
    "cell_type": "code",
@@ -252,19 +242,17 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
    "metadata": {},
-   "source": [
-    "model.stats()"
-   ],
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "model.print()"
   },
   {
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "!cat "
+    "model.stats()"
    ],
    "outputs": [],
    "execution_count": null
@@ -319,16 +307,7 @@
   {
    "cell_type": "code",
    "metadata": {},
-   "source": [
-    "!cat "
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [],
+   "source": "new_model.print()",
    "outputs": [],
    "execution_count": null
   }
