enable loading obs from files, steady state and time series

--- a/modrev_tutorial.ipynb
+++ b/modrev_tutorial.ipynb
@@ -157,7 +157,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The following function can be used to check the possible repair actions, based on the already loaded observations"
+   "source": "The following function can be used to check the possible repair actions, based on the model and loaded observations."
   },
   {
    "cell_type": "code",
@@ -165,6 +165,29 @@
    "source": "model.stats()",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Additionally, we can also check the stats with observations from a file, instead of our observation dictionary.\n",
+    "\n",
+    "To do this, we also need to specify if these are steady state or time-series (synchronous) observations."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "model.stats(observation_file=\"/opt/ModRev/examples/obsSS.lp\", state_scheme=\"steady\")"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "model.stats(observation_file=\"/opt/ModRev/examples/obsTS01.lp\", state_scheme=\"synchronous\")"
   },
   {
    "metadata": {},
